package com.isaac.pattern.decorator;

/**
 * @Author : Isaac
 * @Description:
 * @Date :Created in 17:18 2017/12/13
 */
public class SimpleTroll implements Troll {

    public void attack() {

    }

    public int getAttackPower() {
        return 10;
    }

    public void fleeBattle() {

    }
}
