package com.isaac.pattern.decorator;

/**
 * @Author : Isaac
 * @Description:
 * @Date :Created in 17:17 2017/12/13
 */
public interface Troll {
    void attack();
    int getAttackPower();
    void fleeBattle();
}
